--- a/algo-se-bi/config.yml
+++ b/algo-se-bi/config.yml
@@ -18,12 +18,13 @@ params:
   env: production # to enable google analytics, opengraph, twitter-cards and schema.
   title: algo-se-bi
   description: "Workspace donde escribo sobre BI en general y Power BI en particular"
-  keywords: [Blog, Portfolio, PaperMod]
+  keywords: [Blog, Power BI, Power Automate, R, Power Query, DAX]
   images: ["<link or path of image for opengraph, twitter-cards>"]
   DateFormat: "2-Jan-2006"
   defaultTheme: auto
   disableThemeToggle: false
   defaultContentLanguage: "es"
+  ShowCodeCopyButtons: true
 
   ShowReadingTime: true
   ShowShareButtons: true
@@ -51,9 +52,9 @@ params:
     safari_pinned_tab: "<link / abs url>"
 
   label:
-    text: "Home"
-    icon: /apple-touch-icon.png
-    iconHeight: 35
+    text: "algose.dev"
+    #icon: /apple-touch-icon.png
+    #iconHeight: 35
 
   # home-info mode
   #homeInfoParams:
@@ -99,6 +100,7 @@ params:
 
 # Read: https://github.com/adityatelange/hugo-PaperMod/wiki/FAQs#using-hugos-syntax-highlighter-chroma
 pygmentsUseClasses: true
+
 markup:
   highlight:
     noClasses: false
@@ -109,48 +111,20 @@ markup:
     # style: monokai
 
 languages:
-    es:
-        languageName: "Spanish"
+    en:
+        languageName: "English"
         weight: 1
         taxonomies:
           tag: tags
         menu:
             main:
                 - identifier: archive
-                  name: Archivo
-                  url: /archives/
-                  weight: 20
-                - identifier: tags
-                  name: Etiquetas
-                  url: /tags/
-                  weight: 40
-                #- identifier: portfolio
-                #  name: Portfolio
-                #  url: /portfolio/
-                #  weight: 50
-                - identifier: search
-                  name: Buscar
-                  url: /search/
-                  weight: 60
-                #- identifier: about
-                #  name: Sobre mí
-                #  url: /about/
-                #  weight: 70
-    en:
-        languageName: ":en:"
-        languageAltTitle: English
-        weight: 2
-        taxonomies:
-          tag: tags
-        menu:
-            main:
-                - identifier: archive
                   name: Archive
-                  url: /archives/
+                  url: archives/
                   weight: 20
                 - identifier: tags
                   name: Tags
-                  url: /tags/
+                  url: tags/
                   weight: 40
                 #- identifier: portfolio
                 #  name: Portfolio
@@ -158,9 +132,42 @@ languages:
                 #  weight: 50
                 - identifier: search
                   name: Search
-                  url: /search/
+                  url: search/
                   weight: 60
                 #- identifier: about
                 #  name: About
                 #  url: /about/
                 #  weight: 70
+    es:
+        languageName: ":es:"
+        languageAltTitle: Spanish
+        weight: 2
+        taxonomies:
+          tag: tags
+        menu:
+            main:
+                - identifier: archive
+                  name: Archivo
+                  url: archives/
+                  weight: 20
+                - identifier: tags
+                  name: Etiquetas
+                  url: tags/
+                  weight: 40
+                #- identifier: portfolio
+                #  name: Portfolio
+                #  url: /portfolio/
+                #  weight: 50
+                - identifier: search
+                  name: Buscar
+                  url: search/
+                  weight: 60
+                #- identifier: about
+                #  name: Sobre mí
+                #  url: /about/
+                #  weight: 70
+
+outputs:
+  home:
+    - html
+    - json
